--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,32 +17,46 @@ header .text{
     position: absolute;
     right: 0;
 }
-
+body{
+    height: 100vh;
+    
+}
 
 main{
     width: 100%;
-    height: 100vh;
+   height: 90%;
     display: flex;
 }
 
 
 .card-container{
-   height: 100%;
+    height: 100%;
     width: 100%;
     background-color: black;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    padding: 10px;
+    gap: 5px;
+    align-content: start;
+    padding: 20px;
     justify-content: center;
+    overflow: hidden;
 }
 
 .card{
-    width: calc(100% / 7);
-   height: 10%;
+    width: 200px;
+    height: 100px;
+    background-color: white;
 }
 
 .card-container .card img{
     width: 100%;
     height: 100%;
+}
+
+
+footer{
+    width: 100%;
+    height: 20vh;
+    background-color: red;
+    position: fixed;
 }
