--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ main{
     background-color: black;
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 10px;
     align-content: start;
     padding: 20px;
     justify-content: center;
@@ -46,6 +46,7 @@ main{
     width: 200px;
     height: 100px;
     background-color: white;
+    position: relative;
 }
 
 .card-container .card img{
@@ -53,10 +54,33 @@ main{
     height: 100%;
 }
 
+.card .text{
+    background-color: red;
+    color: white;
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    padding: 3px;
+    background-color: rgba(0, 0, 0, 0.527);
+}
 
 footer{
     width: 100%;
     height: 20vh;
-    background-color: red;
+    background-color: purple;
     position: fixed;
+}
+
+
+#mic-button{
+    display: flex;
+    justify-content: center;
+    background-color: red;
+    align-items: center;
+}
+
+.left-side{
+    display: flex;
+    flex-direction: row;
 }
