--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 header{
@@ -26,10 +27,12 @@ main{
     width: 100%;
    height: 90%;
     display: flex;
+    background-color: black;
 }
 
 
 .card-container{
+    margin-inline: 5%;
     height: 100%;
     width: 100%;
     background-color: black;
@@ -45,7 +48,7 @@ main{
 .card{
     width: 200px;
     height: 100px;
-    background-color: white;
+ 
     position: relative;
 }
 
@@ -67,20 +70,63 @@ main{
 
 footer{
     width: 100%;
-    height: 20vh;
-    background-color: purple;
+    min-height: 5vh;
+    background-color: #222222;
     position: fixed;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
 }
 
 
-#mic-button{
+.button{
     display: flex;
     justify-content: center;
-    background-color: red;
+    /* background-color: red; */
+    align-items: center;
+
+    color: white;
+}
+
+.button .fa-chevron-up{
+    font-size: 10px;
+}
+
+.icon-text{
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.left-side{
+.left-foot{
     display: flex;
     flex-direction: row;
+    gap: 10px;
+   
+}
+
+.center-foot{
+    display: flex;
+   gap: 10px;
+}
+
+#right-foot{
+    width: 10%;
+    color: red;
+    background-color:rgba(74, 74, 74, 1) ;
+    position:relative
+}
+
+#right-foot span{
+    position:absolute;
+
+    top: 50%;
+
+    left:50%;
+
+    transform: translate(-50%, -50%);
+
+    font-size: small;
 }
