--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,24 @@ header{
     width: 100%;
     background-color: black;
     color: white;
-
+    padding: 5px;
     position: relative;
 }
 
 header .text{
     position: absolute;
     right: 0;
+    display: flex;
+    gap: 20px;
 }
+
+header .text span{
+    padding: 5px;
+    border-radius: 10px;
+    background-color: rgba(74, 74, 74, 1);
+    text-transform: capitalize;
+}
+
 body{
     height: 100vh;
     
@@ -77,7 +87,7 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
+    padding: 2px;
 }
 
 
@@ -104,12 +114,13 @@ footer{
     display: flex;
     flex-direction: row;
     gap: 10px;
-   
+   align-items: center;
 }
 
 .center-foot{
     display: flex;
    gap: 10px;
+   align-items: center;
 }
 
 #right-foot{
@@ -129,4 +140,9 @@ footer{
     transform: translate(-50%, -50%);
 
     font-size: small;
+}
+
+a{
+    text-decoration: none;
+    display: inline-block;
 }
